--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 :root{
-    --bg-color: var(--bg-color) #101113;
+    --bg-color: var(--bg-color) #2c2c2c;
     --text-color: #fff;
     --main-color: #34e7f8;
     --other-color: #fcfcfc;
